--- a/_posts/2013-09-28-reload-google-app-engine-web-app.html
+++ b/_posts/2013-09-28-reload-google-app-engine-web-app.html
@@ -26,7 +26,7 @@ blogger_orig_url: http://blog.tremblay.pro/2013/09/reload-google-app-engine-web-
   <br/>
   <div class="separator" style="clear: both; text-align: center;"><a
     href="{{site.baseurl}}public/images{{page.url}}external.png" imageanchor="1"
-    style="margin-left: 1em; margin-right: 1em;"><img border="0" height="396"
+    style="margin-left: 1em; margin-right: 1em;"><img border="0" height="396" alt="External tools"
                                                       src="{{site.baseurl}}public/images{{page.url}}external-small.png"
                                                       width="400"/></a>
   <div class="separator" style="clear: both; text-align: center;"><br/></div>
