Add noreferer noopener

--- a/_posts/2013-07-08-delete-git-remote-tag.html
+++ b/_posts/2013-07-08-delete-git-remote-tag.html
@@ -10,4 +10,4 @@ blogger_id: tag:blogger.com,1999:blog-8282654404214414992.post-31269693773185027
 blogger_orig_url: http://blog.tremblay.pro/2013/07/delete-git-remote-tag.html
 ---
 
-<div dir="ltr" style="text-align: left;" trbidi="on">Easy when you know it. But almost impossible to guess.<br /><br /><span style="font-family: Courier New, Courier, monospace;">git tag -d my_tag_name</span><br /><span style="font-family: Courier New, Courier, monospace;">git push origin :refs/tags/my_tag_name</span><br /><br />Thanks to <a href="http://nathanhoad.net/how-to-delete-a-remote-git-tag" target="_blank">Nathan Hoad</a>.</div>
+<div dir="ltr" style="text-align: left;" trbidi="on">Easy when you know it. But almost impossible to guess.<br /><br /><span style="font-family: Courier New, Courier, monospace;">git tag -d my_tag_name</span><br /><span style="font-family: Courier New, Courier, monospace;">git push origin :refs/tags/my_tag_name</span><br /><br />Thanks to <a href="http://nathanhoad.net/how-to-delete-a-remote-git-tag" target="_blank" rel="noopener noreferrer">Nathan Hoad</a>.</div>
