--- a/_posts/2013-10-19-lambdas-and-generics-explosive-cocktail.html
+++ b/_posts/2013-10-19-lambdas-and-generics-explosive-cocktail.html
@@ -10,4 +10,4 @@ blogger_id: tag:blogger.com,1999:blog-8282654404214414992.post-38055939610036588
 blogger_orig_url: http://blog.tremblay.pro/2013/10/lambdas-and-generics-explosive-cocktail.html
 ---
 
-<div dir="ltr" style="text-align: left;" trbidi="on">I had a great time last week at the Toulouse and Bordeaux JUG.<br /><br />I talked about mostly unknown facts about Java generics but also how they will blend with the fast coming lambdas.<br /><br />Can be a helpful survival guide I hope. The slides are on <a href="http://www.slideshare.net/henrit/under-the-hood-of-generics-20131017-bordeaux-jug" target="_blank">Slideshare</a>.</div>
+<div dir="ltr" style="text-align: left;" trbidi="on">I had a great time last week at the Toulouse and Bordeaux JUG.<br /><br />I talked about mostly unknown facts about Java generics but also how they will blend with the fast coming lambdas.<br /><br />Can be a helpful survival guide I hope. The slides are on <a href="http://www.slideshare.net/henrit/under-the-hood-of-generics-20131017-bordeaux-jug" target="_blank" rel="noopener noreferrer">Slideshare</a>.</div>
