--- a/_posts/2014-01-07-the-art-of-benchmarking.html
+++ b/_posts/2014-01-07-the-art-of-benchmarking.html
@@ -10,4 +10,4 @@ blogger_id: tag:blogger.com,1999:blog-8282654404214414992.post-83727625740288682
 blogger_orig_url: http://blog.tremblay.pro/2014/01/the-art-of-benchmarking.html
 ---
 
-<div dir="ltr" style="text-align: left;" trbidi="on">Here is an <a href="http://blog.octo.com/en/the-art-of-benchmarking/" target="_blank">article </a>I wrote about benchmarking, their flaws and what you can do with it. Also available <a href="http://blog.octo.com/lart-du-benchmark/" target="_blank">in French</a></div>
+<div dir="ltr" style="text-align: left;" trbidi="on">Here is an <a href="http://blog.octo.com/en/the-art-of-benchmarking/" target="_blank" rel="noopener noreferrer">article </a>I wrote about benchmarking, their flaws and what you can do with it. Also available <a href="http://blog.octo.com/lart-du-benchmark/" target="_blank" rel="noopener noreferrer">in French</a></div>
