--- a/_posts/2014-05-18-universite-de-la-performance.html
+++ b/_posts/2014-05-18-universite-de-la-performance.html
@@ -10,4 +10,4 @@ blogger_id: tag:blogger.com,1999:blog-8282654404214414992.post-40181224271172883
 blogger_orig_url: http://blog.tremblay.pro/2014/05/universite-de-la-performance.html
 ---
 
-<div dir="ltr" style="text-align: left;" trbidi="on">I just published on Slideshare the <a href="http://www.slideshare.net/henrit/perf-university" target="_blank">slide from the Université de la Performance</a> done at Devoxx France 2014.<br /><br />Obviously it's in French and much less interesting without the demos. Hopefully, the video should go out on <a href="http://www.parleys.com/" target="_blank">Parleys </a>one day.<br /><br /></div>
+<div dir="ltr" style="text-align: left;" trbidi="on">I just published on Slideshare the <a href="http://www.slideshare.net/henrit/perf-university" target="_blank" rel="noopener noreferrer">slide from the Université de la Performance</a> done at Devoxx France 2014.<br /><br />Obviously it's in French and much less interesting without the demos. Hopefully, the video should go out on <a href="http://www.parleys.com/" target="_blank" rel="noopener noreferrer">Parleys </a>one day.<br /><br /></div>
